--- a/src/main/resources/templates/category_form.html
+++ b/src/main/resources/templates/category_form.html
@@ -10,7 +10,7 @@
 	<h1>Create New Category</h1>
 	<div>
 		<form th:action="@{/categories/save}" th:object="${category}" method="POST"
-		style="max-width_ 600px; margin: 0 auto;">
+		style="max-width: 600px; margin: 0 auto;">
 			<div class="m-3">
 				<div class="form-group row">
 					<label class="col-form-label col-sm-4">Category Name: </label>
